--- a/mikrotik-burst-limit-calculator.html
+++ b/mikrotik-burst-limit-calculator.html
@@ -48,10 +48,10 @@
       a:visited{color:#f60}
       a:hover{color:#f60}
       a:active{color:#f60}      button{color:#fff;background-color:#f60;border-color:#f60;border:none;padding:8px;width:100%;font-weight:700;font-size:14px!important;cursor:pointer;border-radius:5px;color:#fff;margin-top:5px;margin-bottom:5px}
-      button:hover{background-color:#ccc;color:#111}
+      button:hover{background-color:#ccc;color:#292929}
       .row:after{content:"";display:table;clear:both}
       input[type=text],select,textarea{width:100%;padding:5px;border:1px solid #bbb;border-radius:1px;resize:vertical;font-weight:700;margin-bottom:5px;font-size:14px!important;border-radius:5px}
-      label{padding:10px 5px 5px 0;display:inline-block;width:100%}
+      label{padding:10px 5px 5px 0;display:inline-block;width:100%; font-weight:normal}
       input[type=submit]{background-color:#f60;color:#fff;padding:12px 20px;border:none;border-radius:1px;cursor:pointer;float:right}
       input[type=submit]:hover{background-color:#45a049}
       .row:after{content:"";display:table;clear:both}
@@ -154,7 +154,7 @@
       <div class="main-wrap">
         <div class="main-sidebar">
           <div class="sidebar">
-            <div style="width:100%;border-bottom:1px solid #999">
+            <div style="width:100%;border-bottom:1px solid #bbb">
               <label><b>TARGET UPLOAD</b></label>
 			 </div> 
 			 <div style="width:100%;">
@@ -181,7 +181,7 @@
             </div>
           </div>
           <div class="sidebar2">
-            <div style="width:100%;border-bottom:1px solid #999">
+            <div style="width:100%;border-bottom:1px solid #bbb">
               <label><b>TARGET DOWNLOAD</b></label>
 			  </div>
 			 <div style="width:100%;"> 
