--- a/mikrotik-burst-limit-calculator.html
+++ b/mikrotik-burst-limit-calculator.html
@@ -170,12 +170,12 @@
               <input onkeydown="upperCaseF(this)" type="text" id="up-interval-bonus" style='color: Crimson' value="6" placeholder="6" onkeypress="return event.charCode != 32" onkeyup="myFunction()">
             </div>
             <div style="margin-top:10px; font-size:14px">
-              Duration Actual Burst Time:
+               Burst Time Duration:
               <div style="display:none;clear:both; margin-top:5px">
                 <span style='color: Crimson'>BD</span> = ( <span id="for-up-burst-threshold" style='color: #191970'>384K</span> * <span id="for-up-burst-time" style='color: DarkViolet'>16s</span> ) / <span id="for-up-burst-limit" style='color: #01A3DF'>1M</span><br>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;= <span id="for-up-burst-duration" style='color: Crimson'>6</span> second<br>
               </div>
-              <div style='font-size:14px; font-weight:bold;margin-top:5px'>
+              <div style='font-size:13px; font-weight:bold;margin-top:5px'>
                 <span style='color: green;' id="new-burst-up">512K</span> to <span id="for-up-burst-limit2" style='color: #01A3DF'>1M</span> in <span id="for-up-burst-duration2" style='color: Crimson'>6</span> seconds<br>
               </div>
             </div>
@@ -197,12 +197,12 @@
               <input onkeydown="upperCaseF(this)" type="text" id="down-interval-bonus" style='color: Crimson' value="6" placeholder="6" onkeypress="return event.charCode != 32" onkeyup="myFunction()">
             </div>
             <div style="margin-top:10px; font-size:14px">
-              Duration Actual Burst Time:
+               Burst Time Duration:
               <div style="display:none; clear:both; margin-top:5px">
                 <span style='color: Crimson;'>BD</span> = ( <span id="for-down-burst-threshold" style='color: #191970'>750K</span> * <span id="for-down-burst-time" style='color: DarkViolet'>16s</span> ) / <span id="for-down-burst-limit" style='color: #01A3DF'>2M</span><br>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;= <span id="for-down-burst-duration" style='color: Crimson'>6</span> second<br>
               </div>
-              <div style='font-size:14px; font-weight:bold;margin-top:5px;'>
+              <div style='font-size:13px; font-weight:bold;margin-top:5px;'>
                 <span style='color:green;' id="new-burst-down">1M</span> to <span id="for-down-burst-limit2" style='color: #01A3DF'>2M</span> in <span id="for-down-burst-duration2" style='color: Crimson'>6</span> seconds<br>
               </div>
             </div>
@@ -222,7 +222,7 @@
           </div>
         </div>
         <div class="content">
-          <span style="margin-left:2px;font-size:14px"><b>COPY PASTE BURST RESULT TO SIMPLE QUEUE OR QUEUE TREE</b></span>
+          <span style="margin-left:2px;font-size:14px; font-weight:700">COPY PASTE BURST RESULT TO <span style="color:#f60">SIMPLE QUEUE</span> OR <span style="color:#f60">QUEUE TREE</span></span>
           <div class="list-output-content" style="margin-bottom:10px">
             <table style="font-weight:normal">
               <thead>
