--- a/mikrotik-pcq-burst-rate-queue-size-generator.html
+++ b/mikrotik-pcq-burst-rate-queue-size-generator.html
@@ -135,7 +135,7 @@
           </div>
         </div>
         <div class="logo-left" style="float:left;"> 
-          <a href="https://buananetpbun.github.io/mikrotik-pcq-burst-rate-queue-size-generator.html"><img style="float:left; margin-top:-6px;margin-right:10px" height="40" width="50" src="./img/mylogo.png"><span style="color:#ff6600 !important">BuanaNETPBun</span>.Github.io</a>  
+          <a href="https://buananetpbun.github.io/mikrotik-pcq-burst-rate-queue-size-generator.html"><img alt="buananetpbun" style="float:left; margin-top:-6px;margin-right:10px" height="40" width="50" src="./img/mylogo.png"><span style="color:#ff6600 !important">BuanaNETPBun</span>.Github.io</a>  
         </div>
       </div>
       <div style="clear:both"></div>
