--- a/mikrotik-burst-limit-calculator.html
+++ b/mikrotik-burst-limit-calculator.html
@@ -227,9 +227,9 @@
             <table style="font-weight:normal">
               <thead>
                 <tr style="background-color: #eee;font-weight:normal">
-                  <th colspan="2" style="background-color: #fff;">Tab General</th>
-                  <th style="background-color: #ddd;" >Upload</th>
-                  <th style="background-color: #ddd;">Download</th>
+                  <th colspan="2" style="background-color: #fff;">TAB GENERAL</th>
+                  <th style="background-color: #ddd;" >UPLOAD</th>
+                  <th style="background-color: #ddd;">DOWNLOAD</th>
                 </tr>
               </thead>
               <tbody>
@@ -253,9 +253,9 @@
                   <td id="result-down-burst-time" style='font-weight:bold;color: DarkViolet' >16</td>
                 </tr>
                 <tr>
-                  <th colspan="2" style="background-color: #fff; font-weight:bold">Tab Advanced</th>
-                  <td style="background-color: #ddd;font-weight:bold">Upload</td>
-                  <td style="background-color: #ddd;font-weight:bold">Download</td>
+                  <th colspan="2" style="background-color: #fff; font-weight:bold">TAB ADVANCED</th>
+                  <td style="background-color: #ddd;font-weight:bold">UPLOAD</td>
+                  <td style="background-color: #ddd;font-weight:bold">DOWNLOAD</td>
                 </tr>
                 <th colspan="2" style="background-color: #eee; font-weight:normal">Limit At</th>
                 <td id="result-up-limit-at" style='font-weight:bold;color: Chocolate' >256K</td>
@@ -271,7 +271,7 @@
             <table id="mytable" style="font-weight:normal">
               <thead>
                 <tr style="background-color: #ddd;" >
-                  <td style="background-color: #ddd; text-align:center"><b>Rate Limit for <span style="color:red">HOTSPOT</span> and <span style="color:red">PPPOE</span></b></td>
+                  <td style="background-color: #ddd; text-align:center"><b>RATE LIMIT FOR <span style="color:red">HOTSPOT</span> AND <span style="color:red">PPPOE</span></b></td>
                 </tr>
               </thead>
               <tr id="result" style="font-size:14px;font-weight:700;">
